--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.2",
   "private": true,
   "dependencies": {
+    "@ant-design/plots": "^2.6.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hello-pangea/dnd": "^16.0.0",
